--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -22,7 +22,7 @@ plugins:
 # SEO settings
 author: "Smart Exchange"
 twitter:
-  username: Smart Exchange
+  username: adsmartx
 social:
   name: Smart Exchange
   links:
